<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    >

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark"
        android:orientation="vertical"
        android:padding="5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/title_float"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:gravity="center_horizontal"
                android:text="@string/stats_header"
                android:textAlignment="center"
                android:textColor="@android:color/primary_text_light"
                android:textSize="24sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/ic_cadence_float"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:contentDescription="@string/cadence"
                android:src="@mipmap/ic_cadence"
                />

            <TextView
                android:id="@+id/cadence_float"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:paddingLeft="5dp"
                android:paddingRight="0dp"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="30sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/ic_resistance_float"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:contentDescription="@string/resistance"
                android:src="@mipmap/ic_resistance"
                />

            <TextView
                android:id="@+id/resistance_float"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:paddingLeft="5dp"
                android:paddingRight="0dp"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="30sp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <ImageView
                android:id="@+id/ic_power_float"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".2"
                android:contentDescription="@string/power"
                android:src="@mipmap/ic_power"
                />

            <TextView
                android:id="@+id/power_float"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".8"
                android:contentDescription="@string/power"
                android:paddingLeft="5dp"
                android:paddingRight="0dp"
                android:textColor="@android:color/primary_text_dark"
                android:textSize="30sp"
                />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
